feat: exponer endpoint para el registro de resultados de partida